--- a/8JuneChallenge2/challenge2.html
+++ b/8JuneChallenge2/challenge2.html
@@ -13,6 +13,7 @@
     <header>
         <h1>
             <!-- Intext styling for some uniqueness-->
+                <marquee class="marquee" behavior="scroll" width="100%" onmouseover="this.stop();" onmouseout="this.start();">
                     <h1 class="fade-in">
                         Anmol Miglani
                     </h1>
@@ -27,7 +28,6 @@
         <section>
             <div class="image-container">
             <img src ="cn-tower.jpg" id="my-image">
-            <img src ="muskoka.jpg" id="my-image">
             </div>
         </section>
         <!-- adding a short paragraph about you -->
